grammar.js
    program: ($) => seq(optional($.hash_bang_line), repeat($._statement)),

    hash_bang_line: ($) => /#!.*/,

    //
    // Export declarations
    //

    export_statement: ($) =>
      choice(
        seq(
          "export",
          choice(
            seq("*", $._from_clause, $._semicolon),
            seq($.export_clause, $._from_clause, $._semicolon),
            seq($.export_clause, $._semicolon)
          )
        ),
        seq(
          repeat(field("decorator", $.decorator)),
          "export",
          choice(
            field("declaration", $._declaration),
            seq("default", field("value", $._expression), $._semicolon)
          )
        )
      ),

    export_clause: ($) =>
      seq(
        "{",
        commaSep(alias($._import_export_specifier, $.export_specifier)),
        optional(","),
        "}"
      ),

    _import_export_specifier: ($) =>
      seq(
        field("name", $.identifier),
        optional(seq("as", field("alias", $.identifier)))
      ),

    _declaration: ($) =>
      choice(
        $.function_declaration,
        $.generator_function_declaration,
        $.class_declaration,
        $.lexical_declaration,
        $.variable_declaration
      ),

    //
    // Import declarations
    //

    import: ($) => token("import"),

    import_statement: ($) =>
      prec(
        1,
        seq(
          "import",
          choice(
            seq($.import_clause, $._from_clause),
            field("source", $.string)
          ),
          $._semicolon
        )
      ),

    import_clause: ($) =>
      choice(
        $.namespace_import,
        $.named_imports,
        seq(
          $.identifier,
          optional(seq(",", choice($.namespace_import, $.named_imports)))
        )
      ),

    _from_clause: ($) => seq("from", field("source", $.string)),

    namespace_import: ($) => seq("*", "as", $.identifier),

    named_imports: ($) =>
      seq(
        "{",
        commaSep(alias($._import_export_specifier, $.import_specifier)),
        optional(","),
        "}"
      ),

    //
    // Statements
    //

    _statement: ($) =>
      choice(
        $.export_statement,
        $.import_statement,
        $.debugger_statement,
        $.expression_statement,
        $._declaration,
        $.statement_block,

        $.if_statement,
        $.switch_statement,
        $.for_statement,
        $.for_in_statement,
        $.while_statement,
        $.do_statement,
        $.try_statement,
        $.with_statement,

        $.break_statement,
        $.continue_statement,
        $.return_statement,
        $.throw_statement,
        $.empty_statement,
        $.labeled_statement,
        $.destiny_statement
      ),

    expression_statement: ($) => seq($._expressions, $._semicolon),

    variable_declaration: ($) =>
      seq("var", commaSep1($.variable_declarator), $._semicolon),

    lexical_declaration: ($) =>
      seq(
        choice("let", "const"),
        commaSep1($.variable_declarator),
        $._semicolon
      ),

    variable_declarator: ($) =>
      seq(
        field("name", choice($.identifier, $._destructuring_pattern)),
        optional($._initializer)
      ),

    statement_block: ($) =>
      prec.right(
        seq("{", repeat($._statement), "}", optional($._automatic_semicolon))
      ),

    else_clause: ($) => seq("else", $._statement),

    if_statement: ($) =>
      prec.right(
        seq(
          "if",
          field("condition", $.parenthesized_expression),
          field("consequence", $._statement),
          optional(field("alternative", $.else_clause))
        )
      ),

    switch_statement: ($) =>
      seq(
        "switch",
        field("value", $.parenthesized_expression),
        field("body", $.switch_body)
      ),

    for_statement: ($) =>
      seq(
        "for",
        "(",
        field(
          "initializer",
          choice(
            $.lexical_declaration,
            $.variable_declaration,
            $.expression_statement,
            $.empty_statement
          )
        ),
        field("condition", choice($.expression_statement, $.empty_statement)),
        field("increment", optional($._expressions)),
        ")",
        field("body", $._statement)
      ),

    for_in_statement: ($) =>
      seq("for", optional("await"), $._for_header, field("body", $._statement)),

    _for_header: ($) =>
      seq(
        "(",
        optional(choice("var", "let", "const")),
        field("left", choice($.parenthesized_expression, $._lhs_expression)),
        choice("in", "of"),
        field("right", $._expressions),
        ")"
      ),

    while_statement: ($) =>
      seq(
        "while",
        field("condition", $.parenthesized_expression),
        field("body", $._statement)
      ),

    do_statement: ($) =>
      seq(
        "do",
        field("body", $._statement),
        "while",
        field("condition", $.parenthesized_expression),
        $._semicolon
      ),

    try_statement: ($) =>
      seq(
        "try",
        field("body", $.statement_block),
        optional(field("handler", $.catch_clause)),
        optional(field("finalizer", $.finally_clause))
      ),

    with_statement: ($) =>
      seq(
        "with",
        field("object", $.parenthesized_expression),
        field("body", $._statement)
      ),

    break_statement: ($) =>
      seq(
        "break",
        field("label", optional(alias($.identifier, $.statement_identifier))),
        $._semicolon
      ),

    continue_statement: ($) =>
      seq(
        "continue",
        field("label", optional(alias($.identifier, $.statement_identifier))),
        $._semicolon
      ),

    debugger_statement: ($) => seq("debugger", $._semicolon),

    return_statement: ($) =>
      seq("return", optional($._expressions), $._semicolon),

    throw_statement: ($) => seq("throw", $._expressions, $._semicolon),

    empty_statement: ($) => ";",

    labeled_statement: ($) =>
      prec.dynamic(
        -1,
        seq(
          field(
            "label",
            alias(
              choice($.identifier, $._reserved_identifier),
              $.statement_identifier
            )
          ),
          ":",
          $._statement
        )
      ),

    destiny_statement: ($) => prec.dynamic(-1, seq("$", ":", $._statement)),

    //
    // Statement components
    //

    switch_body: ($) =>
      seq("{", repeat(choice($.switch_case, $.switch_default)), "}"),

    switch_case: ($) =>
      seq("case", field("value", $._expressions), ":", repeat($._statement)),

    switch_default: ($) => seq("default", ":", repeat($._statement)),

    catch_clause: ($) =>
      seq(
        "catch",
        optional(
          seq(
            "(",
            field("parameter", choice($.identifier, $._destructuring_pattern)),
            ")"
          )
        ),
        field("body", $.statement_block)
      ),

    finally_clause: ($) => seq("finally", field("body", $.statement_block)),

    parenthesized_expression: ($) => seq("(", $._expressions, ")"),

    //
    // Expressions
    //
    _expressions: ($) => choice($._expression, $.sequence_expression),

    _expression: ($) =>
      choice(
        $._primary_expression,
        $._jsx_element,
        $.jsx_fragment,
        $.assignment_expression,
        $.augmented_assignment_expression,
        $.await_expression,
        $.unary_expression,
        $.binary_expression,
        $.ternary_expression,
        $.update_expression,
        $.new_expression,
        $.yield_expression
      ),

    _primary_expression: ($) =>
      choice(
        $.this,
        $.super,
        $.identifier,
        alias($._reserved_identifier, $.identifier),
        $.number,
        $.string,
        $.template_string,
        $.regex,
        $.true,
        $.false,
        $.null,
        $.undefined,
        $.import,
        $.object,
        $.array,
        $.function,
        $.arrow_function,
        $.generator_function,
        $.class,
        $.parenthesized_expression,
        $.subscript_expression,
        $.member_expression,
        $.meta_property,
        $.call_expression
      ),

    object: ($) =>
      prec(
        PREC.OBJECT,
        seq(
          "{",
          commaSep(
            optional(
              choice(
                $.pair,
                $.spread_element,
                $.method_definition,
                $.assignment_pattern,
                alias(
                  choice($.identifier, $._reserved_identifier),
                  $.shorthand_property_identifier
                )
              )
            )
          ),
          "}"
        )
      ),

    array: ($) =>
      seq(
        "[",
        commaSep(optional(choice($._expression, $.spread_element))),
        "]"
      ),

    class_declaration: ($) =>
      prec(
        PREC.DECLARATION,
        seq(
          repeat(field("decorator", $.decorator)),
          "class",
          field("name", $.identifier),
          optional($.class_heritage),
          field("body", $.class_body),
          optional($._automatic_semicolon)
        )
      ),

    function: ($) =>
      seq(
        optional("async"),
        "function",
        field("name", optional($.identifier)),
        $._call_signature,
        field("body", $.statement_block)
      ),

    arrow_function: ($) =>
      seq(
        optional("async"),
        choice(
          field(
            "parameter",
            choice(alias($._reserved_identifier, $.identifier), $.identifier)
          ),
          $._call_signature
        ),
        "=>",
        field("body", choice($._expression, $.statement_block))
      ),

    // Override
    _call_signature: ($) => seq(field("parameters", $.formal_parameters)),

    call_expression: ($) =>
      choice(
        prec(
          PREC.CALL,
          seq(
            field("function", $._expression),
            field("arguments", choice($.arguments, $.template_string))
          )
        ),
        prec(
          PREC.MEMBER,
          seq(
            field("function", $._primary_expression),
            "?.",
            field("arguments", $.arguments)
          )
        )
      ),

    new_expression: ($) =>
      prec.right(
        PREC.NEW,
        seq(
          "new",
          field("constructor", $._primary_expression),
          field("arguments", optional(prec.dynamic(1, $.arguments)))
        )
      ),

    member_expression: ($) =>
      prec(
        PREC.MEMBER,
        seq(
          field("object", choice($._expression, $._primary_expression)),
          choice(".", "?."),
          field("property", alias($.identifier, $.property_identifier))
        )
      ),

    subscript_expression: ($) =>
      prec.right(
        PREC.MEMBER,
        seq(
          field("object", choice($._expression, $._primary_expression)),
          optional("?."),
          "[",
          field("index", $._expressions),
          "]"
        )
      ),

    _lhs_expression: ($) =>
      choice(
        $.member_expression,
        $.subscript_expression,
        $.identifier,
        alias($._reserved_identifier, $.identifier),
        $._destructuring_pattern
      ),

    assignment_expression: ($) =>
      prec.right(
        PREC.ASSIGN,
        seq(
          field("left", choice($.parenthesized_expression, $._lhs_expression)),
          "=",
          field("right", $._expression)
        )
      ),

    _augmented_assignment_lhs: ($) =>
      choice(
        $.member_expression,
        $.subscript_expression,
        alias($._reserved_identifier, $.identifier),
        $.identifier,
        $.parenthesized_expression
      ),

    augmented_assignment_expression: ($) =>
      prec.right(
        PREC.ASSIGN,
        seq(
          field("left", $._augmented_assignment_lhs),
          choice(
            "+=",
            "-=",
            "*=",
            "/=",
            "%=",
            "^=",
            "&=",
            "|=",
            ">>=",
            ">>>=",
            "<<=",
            "**=",
            "&&=",
            "||=",
            "??="
          ),
          field("right", $._expression)
        )
      ),

    _initializer: ($) => seq("=", field("value", $._expression)),

    _destructuring_pattern: ($) =>
      choice(
        alias($.object, $.object_pattern),
        alias($.array, $.array_pattern)
      ),

    binary_expression: ($) =>
      choice(
        ...[
          ["&&", PREC.AND],
          ["||", PREC.OR],
          [">>", PREC.TIMES],
          [">>>", PREC.TIMES],
          ["<<", PREC.TIMES],
          ["&", PREC.AND],
          ["^", PREC.OR],
          ["|", PREC.OR],
          ["+", PREC.PLUS],
          ["-", PREC.PLUS],
          ["*", PREC.TIMES],
          ["/", PREC.TIMES],
          ["%", PREC.TIMES],
          ["**", PREC.EXP],
          ["<", PREC.REL],
          ["<=", PREC.REL],
          ["==", PREC.REL],
          ["===", PREC.REL],
          ["!=", PREC.REL],
          ["!==", PREC.REL],
          [">=", PREC.REL],
          [">", PREC.REL],
          ["??", PREC.TERNARY],
          ["instanceof", PREC.REL],
          ["in", PREC.REL],
          ["as", PREC.AS],
        ].map(([operator, precedence]) =>
          prec.left(
            precedence,
            seq(
              field("left", $._expression),
              field("operator", operator),
              field("right", $._expression)
            )
          )
        )
      ),

    update_expression: ($) =>
      prec.left(
        PREC.INC,
        choice(
          seq(
            field("argument", $._expression),
            field("operator", choice("++", "--"))
          ),
          seq(
            field("operator", choice("++", "--")),
            field("argument", $._expression)
          )
        )
      ),

    sequence_expression: ($) =>
      prec(
        PREC.COMMA,
        seq(
          field("left", $._expression),
          ",",
          field("right", choice($.sequence_expression, $._expression))
        )
      ),

    //
    // Primitives
    //

    string: ($) =>
      choice(
        seq(
          '"',
          repeat(
            choice(
              token.immediate(prec(PREC.STRING, /[^"\\\n]+|\\\r?\n/)),
              $.escape_sequence
            )
          ),
          '"'
        ),
        seq(
          "'",
          repeat(
            choice(
              token.immediate(prec(PREC.STRING, /[^'\\\n]+|\\\r?\n/)),
              $.escape_sequence
            )
          ),
          "'"
        )
      ),

    comment: ($) =>
      token(
        prec(
          PREC.COMMENT,
          choice(seq("//", /.*/), seq("/*", /[^*]*\*+([^/*][^*]*\*+)*/, "/"))
        )
      ),

    identifier: ($) => {
      const alpha = /[^\x00-\x1F\s0-9:;`"'@#.,|^&<=>+\-*/\\%?!~()\[\]{}\uFEFF\u2060\u200B\u00A0]|\\u[0-9a-fA-F]{4}|\\u\{[0-9a-fA-F]+\}/;
      const alphanumeric = /[^\x00-\x1F\s:;`"'@#.,|^&<=>+\-*/\\%?!~()\[\]{}\uFEFF\u2060\u200B\u00A0]|\\u[0-9a-fA-F]{4}|\\u\{[0-9a-fA-F]+\}/;
      return token(seq(alpha, repeat(alphanumeric)));
    },

    true: ($) => "true",
    arguments: ($) =>
      prec(
        PREC.CALL,
        seq(
          "(",
          commaSep(optional(choice($._expression, $.spread_element))),
          ")"
        )
      ),

    decorator: ($) =>
      seq(
        "@",
        choice(
          $.identifier,
          alias($.decorator_member_expression, $.member_expression),
          alias($.decorator_call_expression, $.call_expression)
        )
      ),

    class_body: ($) =>
      seq(
        "{",
        repeat(
          choice(
            seq(field("member", $.method_definition), optional(";")),
            seq(field("member", $.public_field_definition), $._semicolon)
          )
        ),
        "}"
      ),

    pair: ($) =>
      seq(field("key", $._property_name), ":", field("value", $._expression)),
